feat: add task CRUD
